5-SSL-with-TLS-Proxy/2-nginx-tls-proxy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-tls-proxy
  namespace: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-tls-proxy
  template:
    metadata:
      labels:
        app: nginx-tls-proxy
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        # - name: tls-proxy-cert
        #   mountPath: /etc/nginx/certs
        #   readOnly: true
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      # - name: tls-proxy-cert
      #   secret:
      #     secretName: tls-proxy-cert
      - name: nginx-config
        configMap:
          name: nginx-tls-proxy
          items:
          - key: nginx.conf
            path: nginx.conf

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-tls-proxy
  namespace: helloworld
spec:
  selector:
    app: nginx-tls-proxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  # type: LoadBalancer
