5-SSL-with-TLS-Proxy/4-helloworld-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world-vs
  namespace: helloworld
spec:
  hosts:
    - hello.tetratelabs.dev 
  gateways:
    - public-gateway
  http:
  - match:
    - uri:
        exact: /nginx
    rewrite:
      uri: "/"  
    route:
    - destination:
        host: nginx-tls-proxy.helloworld.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /health
    rewrite:
      uri: "/healthz"  
    route:
    - destination:
        host: nginx-tls-proxy.helloworld.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        exact: /proxy
    route:
    - destination:
        host: nginx-tls-proxy.helloworld.svc.cluster.local
        port:
          number: 80
  - route:
    - destination:
        host: hello-world.helloworld.svc.cluster.local
        port:
          number: 80
